--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="grid">
+    <p-menubar [model]="items" class="w-full"></p-menubar>
     <div class="col-12">
         <router-outlet></router-outlet>
     </div>
