Fleshout the dashboard display
Signed-off-by: Andrew Brunker <andrew@brunker.net.au>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="grid">
+    <p-toast position="top-left"></p-toast>
     <p-menubar [model]="items" class="w-full"></p-menubar>
     <div class="col-12">
         <router-outlet></router-outlet>
