--- a/src/app/modules/people/components/list/list.component.html
+++ b/src/app/modules/people/components/list/list.component.html
@@ -1,1 +1,35 @@
-<p>list works!</p>
+<div class="grid">
+    <div class="col-12">
+        <div class="flex justify-content-around">
+            <button pButton pRipple type="button" label="New Player" icon="pi pi-plus" iconPos="left" class="p-button-raised p-button-success" (click)="helper.goTo('/players/create')"></button>
+        </div>
+    </div>
+    <div class="col-12">
+        <p-panel>
+            <ng-template pTemplate="header">
+                <i class="pi pi-users"></i>&nbsp;Avaliable Players
+            </ng-template>
+            <div *ngIf="people.length === 0" class="w-full text-center font-bold">
+                No Active Players Found
+            </div>
+            <div *ngIf="people.length > 0" class="w-full">
+                <p-table [value]="people">
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Name</th>
+                            <th></th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-person>
+                        <tr>
+                            <td>{{person.name}}</td>
+                            <td class="flex justify-content-end">
+                                <button pButton pRipple type="button" icon="pi pi-eye" class="p-button-raised p-button-rounded p-button-info" (click)="helper.goTo('/players/' + person.id)"></button>
+                            </td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+        </p-panel>
+    </div>
+</div>
