--- a/src/app/modules/people/components/edit/edit.component.html
+++ b/src/app/modules/people/components/edit/edit.component.html
@@ -1,1 +1,23 @@
-<p>edit works!</p>
+<div class="grid">
+    <div class="col-12 md:col-4 xl:col-3">
+        <button pButton pRipple type="button" label="Back" icon="pi pi-chevron-circle-left" iconPos="left" class="p-button-raised p-button-warning" (click)="goBack()"></button>
+    </div>
+    <div class="col-12 md:col-8 xl:col-9" *ngIf="player !== undefined">
+        Editing Player {{ getOriginalName() }}
+    </div>
+    <div class="col-12" *ngIf="player !== undefined">
+        <p-panel>
+            <ng-template pTemplate="header">
+                Players Details
+            </ng-template>
+            <div>Username</div>
+            <input id="player-name" type="text" pInputText [(ngModel)]="player.name">
+            <ng-template pTemplate="footer">
+                <div class="flex justify-content-around">
+                    <button pButton pRipple type="button" icon="pi pi-undo" class="p-button-raised p-button-rounded p-button-warning" (click)="reset()"></button>
+                    <button pButton pRipple type="button" icon="pi pi-save" class="p-button-raised p-button-rounded p-button-success" (click)="update()"></button>
+                </div>
+            </ng-template>
+        </p-panel>
+    </div>
+</div>
