--- a/src/app/modules/people/components/list/list.component.html
+++ b/src/app/modules/people/components/list/list.component.html
@@ -24,7 +24,8 @@
                         <tr>
                             <td>{{person.name}}</td>
                             <td class="flex justify-content-end">
-                                <button pButton pRipple type="button" icon="pi pi-eye" class="p-button-raised p-button-rounded p-button-info" (click)="helper.goTo('/players/' + person.id)"></button>
+                                <button pButton pRipple type="button" icon="pi pi-eye" class="p-button-raised p-button-rounded p-button-info ml-2" (click)="helper.goTo('/players/' + person.id)"></button>
+                                <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-raised p-button-rounded p-button-warning ml-2" (click)="helper.goTo('/players/' + person.id + '/edit')"></button>
                             </td>
                         </tr>
                     </ng-template>
