--- a/src/app/modules/people/components/view/view.component.html
+++ b/src/app/modules/people/components/view/view.component.html
@@ -1,1 +1,22 @@
-<p>view works!</p>
+<div class="grid">
+    <div class="col-12 md:col-4 xl:col-3">
+        <button pButton pRipple type="button" label="Back" icon="pi pi-chevron-circle-left" iconPos="left" class="p-button-raised p-button-warning" (click)="goBack()"></button>
+    </div>
+    <div class="col-12 md:col-8 xl:col-9 text-4xl" *ngIf="player !== undefined">
+        Player: {{ player.name }}
+    </div>
+    <div class="col-12" *ngIf="player !== undefined">
+        <p-panel>
+            <ng-template pTemplate="header">
+                Players Details
+            </ng-template>
+            <div>Username</div>
+            <div>{{ player.name }}</div>
+            <ng-template pTemplate="footer">
+                <div class="flex justify-content-around">
+                    <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-raised p-button-rounded p-button-warning" (click)="edit()"></button>
+                </div>
+            </ng-template>
+        </p-panel>
+    </div>
+</div>
