--- a/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -58,8 +58,8 @@
                             <td>{{game.max_points}}</td>
                             <td>{{game.players.length}}</td>
                             <td class="flex justify-content-end">
-                                <button pButton pRipple type="button" icon="pi pi-eye" class="p-button-raised p-button-rounded p-button-info" (click)="helper.goTo('/games/' + game.id)"></button>
-                                <button pButton pRipple type="button" icon="pi pi-play" class="p-button-raised p-button-rounded p-button-success" (click)="helper.goTo('/games/' + game.id + '/play')"></button>
+                                <button pButton pRipple type="button" icon="pi pi-eye" class="p-button-raised p-button-rounded p-button-info ml-2" (click)="helper.goTo('/games/' + game.id)"></button>
+                                <button pButton pRipple type="button" icon="pi pi-play" class="p-button-raised p-button-rounded p-button-success ml-2" (click)="helper.goTo('/games/' + game.id + '/play')"></button>
                             </td>
                         </tr>
                     </ng-template>
