--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,5 @@
 @import 'primeng/resources/primeng.css'
 @import 'primeng/resources/themes/lara-dark-purple/theme.css'
+// @import 'primeng/resources/themes/lara-light-purple/theme.css'
 @import 'primeicons/primeicons'
 @import 'primeflex/primeflex'
