Improve the layout for larger screens
Signed-off-by: Andrew Brunker <andrew@brunker.net.au>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="grid">
     <p-toast position="top-left"></p-toast>
     <p-menubar [model]="items" class="w-full"></p-menubar>
-    <div class="col-12">
+    <div class="col-12 md:col-10 xl:col-8 md:col-offset-1 xl:col-offset-2">
         <router-outlet></router-outlet>
     </div>
+
 </div>
